@@ -4,6 +4,8 @@ NEWS for gWidgetstcltk
 
 Changes for 0.0-40
 -------------------
+* change behavior of default anchoring of children into parent. This
+can be adjusted through the option "gw:tcltkDefaultAnchor".
 * added extra functionality for gslider. Need not be integer valued now.
 * bug fix for add method and fill argument
 * Added calendar selector to gcalendar
