@@ -1,3 +1,10 @@
+2010-11-03  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/aaaGenerics.R: fixed bug in addSpring. Still doesn't work horizontally
+
+	* R/aaaGenerics.R: changed default anchor value to c(-1,1) or
+	NW. This can be adjusted through through the option "gw:tcltkDefaultAnchor".
+
 2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gslider.R (modifyLabel): added from=vector argument where
